/*
 * Copyright (c) 2016-2019 Deephaven Data Labs and Patent Pending
 */

syntax = "proto3";

package io.deephaven.proto.common;

option java_multiple_files = true;
option optimize_for = SPEED;

/*
 * Request to authenticate.
 */
message AuthRequest {
    // serialized AuthToken, will be empty if the token is null
    bytes token = 1;
}

/*
 * Response to authentication request.
 */
message AuthReply {
    bool isAuthenticated = 1;
}

/*
 * Request for About information.
 */
message AboutRequest {
}

/*
 * Response to about request.
 */
message AboutReply {
    int32 version = 1;
    string name = 2;
    string message = 3;
}

/* Enum mirroring NamespaceSet */
enum NamespaceSetEnum {
  UNSET = 0;
  SYSTEM = 1;
  USER = 2;
}

message PingRequest {
  sfixed64 sender_send_time_millis = 1;
  string from = 2;  // a log-printable string identifying the sender of the request.
}

message PingResponse {
  sfixed64 receiver_receive_time_millis = 1;
  string from = 2;  // a log-printable string identifying the sender of the response.
}

message ExceptionDetailsMessage {
  string errorMessage = 1;
  string stackTrace = 2;
  string shortCauses = 3;
}